--- a/src/pages/Characters/Characters.scss
+++ b/src/pages/Characters/Characters.scss
@@ -1,6 +1,9 @@
+@import '@/breakpoints';
+
 .character-cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  padding-inline: 16px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(173px, 1fr));
+  row-gap: 16px;
+  column-gap: 12px;
+  width: 100%;
 }
