--- a/src/components/CharacterCard/CharacterCard.scss
+++ b/src/components/CharacterCard/CharacterCard.scss
@@ -1,7 +1,9 @@
+@import '@/variables';
+
 .character-card {
-  height: 245.97px;
+  min-height: 245.97px;
   width: 173px;
-  background-color: black;
+  background-color: $black;
   clip-path: polygon(
     0 0,
     100% 0,
@@ -14,28 +16,40 @@
   .character-image-container {
     width: 173px;
     height: 189.97px;
+    position: relative;
 
     .character-image {
       object-fit: cover;
+      height: 100%;
+      width: 100%;
     }
   }
 
+  .divider {
+    height: 4px;
+    background-color: $red;
+  }
+
   .character-curtain {
-    background-color: red;
-    bottom: 50px;
+    background: $red;
+    bottom: 100%;
+    height: 100%;
+    left: 0;
     position: absolute;
-    height: 60px;
+    transition: transform 300ms linear;
     width: 100%;
     z-index: -1;
-    transition: all 200ms linear;
   }
 
   .character-description-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
     padding: 16px;
+
+    .character-description-name {
+      width: calc(100% - 12px);
+    }
 
     .is-favorite-icon path {
       transition-delay: 100ms;
@@ -44,7 +58,7 @@
 
   &:hover {
     .character-curtain {
-      bottom: 0;
+      transform: translate3d(0, 100%, 0);
     }
 
     .is-favorite-icon path {
