--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,8 @@
 @import '@/breakpoints';
+@import '@/variables';
 
 header {
-  background-color: black;
+  background-color: $black;
   display: flex;
   justify-content: space-between;
   align-items: center;
