use of Context to add and remove and filter & fix Search fetches Characters on mount & improve code in general

--- a/src/pages/CharacterDetail/CharacterDetail.scss
+++ b/src/pages/CharacterDetail/CharacterDetail.scss
@@ -48,6 +48,10 @@
   padding-block: 48px;
   padding-left: 16px;
 
+  .comics-title {
+    margin-bottom: 24px;
+  }
+
   .character-comics-list-container {
     display: flex;
     column-gap: 16px;
