--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,14 @@ h1 {
   line-height: 1.1;
 }
 
+h1,
+h2,
 p {
   margin: 0;
 }
 
 button {
   cursor: pointer;
+  background-color: transparent;
+  border: none;
 }
