add error handling & fix Search Components

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,14 @@
   font-weight: 500;
 }
 
+.text-error {
+  color: $red;
+}
+
+.page {
+  min-height: 80vh;
+}
+
 .page-container {
   padding: 8px;
 
