--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -19,6 +19,11 @@
     color: $black;
     outline: none;
     text-transform: uppercase;
+    width: 100%;
+
+    &:disabled {
+      cursor: not-allowed;
+    }
   }
 }
 
