fix Favorites - color text

--- a/src/components/Favorites/Favorites.scss
+++ b/src/components/Favorites/Favorites.scss
@@ -1,6 +1,9 @@
+@import '@/variables';
+
 .favorite-container {
   display: flex;
   align-items: center;
+  color: $white;
 
   #favorite-icon {
     margin-right: 8px;
